--- a/app/invoicecreation/webapp/i18n/i18n.properties
+++ b/app/invoicecreation/webapp/i18n/i18n.properties
@@ -3,11 +3,11 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Invoice Creation
+appTitle=Invoice Posting
 
 #YDES: Application description
 appDescription=A Fiori application.
 #XTIT: Main view title
-title=Invoice Creation
+title=Invoice Posting
 
-flpTitle=Invoice Creation
+flpTitle=Invoice Posting
